# regexp2

./: Cargo.toml  README  README.md
.github/workflows/: ci.yaml
automata/: Cargo.toml
automata/src/: convert.rs  dfa.rs  lib.rs  matching.rs  nfa.rs
automata/tests/: test_nfa.rs
examples/: regextest.rs
lib/tree/src/: quickcheck.rs
lib/tree/src/node/: iter.rs
regexp2/: Cargo.toml
regexp2/src/: ast.rs  class.rs  disjoint.rs  lib.rs  mergeset.rs  parser.rs  regexp.rs
regexp2/tests/: macros.rs  test_char_class.rs  test_concat.rs  test_malformed.rs  test_plus.rs  test_simple.rs  test_union.rs
src/: class.rs  dfa.rs  disjoint.rs  engines.rs  lib.rs  macros.rs  matching.rs  nfa.rs  parser.rs  ranges.rs  regexp.rs  table.rs  tests.rs  util.rs
tests/: macros.rs  test_composite.rs  test_kleene.rs  test_malformed.rs  test_optional.rs
