[package]
name = "automata"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
edition = "2018"
workspace = ".."

description = """
Non-deterministic and deterministic automata for regexp2.
"""
documentation = "https://docs.rs/regexp2-automata"
license = "MIT/Apache-2.0"

categories = ["text-processing"]

[package.metadata]
msrv = "1.53.0"

[package.metadata]
msrv = "1.53.0"
