[package]
name = "regexp2"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
edition = "2018"
workspace = ".."

description = """
A toy regular expressions implementation. Don't use this!
"""
documentation = "https://docs.rs/regexp2"
readme = "README.md"
license = "MIT/Apache-2.0"

categories = ["text-processing"]

[package.metadata]
msrv = "1.53.0"

[dependencies]
automata = { path = "../automata" }

im = "15.0"
thiserror = "1.0"
